# pragmatiq

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODEL_CARD.md  NOTICE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
.superpowers/sdd/: task-1-report.md  task-3-report.md  task-9-report.md  task-bugbot-report.md
apps/: README.md
apps/demo/: app.py
configs/: pretrain.yaml  pretrain_nano.yaml
configs/data/: aggregates.example.yaml  synthetic.yaml  tokenizer.yaml  tokenizer_nemotron.yaml
configs/finetune/: aml_gnn.yaml  credit.yaml  fraud.yaml
configs/model/: large.yaml  medium.yaml  small.yaml
demo/: app.py
deploy/: Dockerfile  docker-compose.yaml
deploy/grafana/dashboards/: dashboards.yaml
deploy/grafana/datasources/: prometheus.yaml
deploy/offline/: README.md  build_offline_bundle.sh
deploy/prometheus/: prometheus.yml
deploy/triton/: Dockerfile
deploy/triton/model_repository/pragmatiq_embedder/: config.pbtxt
deploy/triton/model_repository/pragmatiq_embedder/1/: model.py
docs/: INTEGRATIONS.md  STABILITY.md  STORAGE.md  architecture.md
docs/assets/: README.md  architecture.mmd
docs/audit/: AUDIT-VERDICT-2026-06-21.md  CORRECTNESS-AUDIT.md
integrations/: README.md  __init__.py  _base.py
integrations/azure/: __init__.py  _adapter.py
integrations/databricks/: __init__.py  _adapter.py  _pyfunc.py
integrations/nebius/: __init__.py  _adapter.py
integrations/sagemaker/: __init__.py  _adapter.py
notebooks/: 01_quickstart_and_data.ipynb  02_tokenize_and_embed.ipynb  03_finetune_and_probe.ipynb  04_aml_gnn.ipynb
pragmatiq/: __init__.py  api.py  cli.py  progress.py  registry.py  validate.py
pragmatiq/core/: __init__.py  config.py  env.py  errors.py
pragmatiq/data/: collate.py  dataset.py  parallel_tokenize.py  schema.py  sharding.py  tokenizer.py
pragmatiq/data/synthetic/: __init__.py  calibrate.py  config.py  episodes.py  generate.py  labels.py  personas.py  report.py  simulator.py  world.py
pragmatiq/experiments/: __init__.py  compare.py  run.py  tracking.py
pragmatiq/inference/: __init__.py  benchmark.py  embedder.py  explain.py  export.py  multitask.py
pragmatiq/inference/serve/: __init__.py  contract.py  runtime.py
pragmatiq/models/: __init__.py  embeddings.py  gnn.py  heads.py  layers.py  lora.py  pragmatiq.py  text_encoder.py
pragmatiq/storage/: __init__.py  artifacts.py  cache.py  fs.py  staging.py
pragmatiq/training/: __init__.py  autoconfig.py  finetuner.py  masking.py  optim.py  pretrainer.py  probe.py  uplift.py
sbom/: README.md
scripts/: deploy_serving.sh  docs_drift_check.py  docs_facts.py  runpod_launch.py  validate_gpu.py
scripts/benchmarks/: multitask_probe.py
scripts/gates/: _env.sh  gate_1.sh  gate_10_byoc.sh  gate_2.sh  gate_3.sh  gate_4.sh  gate_5.sh  gate_6.sh  gate_7.sh  gate_8.sh  gate_9_contract.sh  gate_integrations.sh  gate_serve_slim.sh  gate_storage.sh  run_full_validation.sh
scripts/supply_chain/: gen_sbom.sh  no_phone_home.py
tests/: _ddp_finetune_runner.py  _ddp_grad_accum_runner.py  test_api_guards.py  test_autoconfig.py  test_benchmark.py  test_byo_realdata.py  test_ddp_grad_accum.py  test_embeddings.py  test_experiments_tracking.py  test_finetuner.py  test_finetuner_ddp.py  test_generator_signal.py  test_gnn.py  test_inference.py  test_integrations_databricks.py  test_integrations_sagemaker.py  test_integrations_stubs.py  test_models.py  test_multitask.py  test_nemotron_variant.py  test_optim_convergence.py  test_progress.py  test_registry_cli.py  test_runs_compare.py  test_sharding_dataset.py  test_storage.py  test_storage_pipeline.py  test_synthetic_generate.py  test_synthetic_labels.py  test_synthetic_world.py  test_text_encoder.py  test_tokenize_parallel.py  test_tokenizer.py  test_training.py  test_truncation.py  test_uplift.py  test_validate.py
tests/baselines/: credit_gbdt.py
tests/boundaries/: test_apps_no_training_import.py  test_no_phone_home.py  test_serve_import_safe.py
tests/contract/: __init__.py  test_cli_commands.py  test_model_api.py  test_public_api.py  test_serving_contract.py
website/: README.md  package.json  pnpm-lock.yaml  source.config.ts
website/app/: global.css  layout.tsx  robots.ts  sitemap.ts
website/app/(home)/: page.tsx
website/components/: mdx.tsx
website/components/ui/: ApiReference.tsx  Badge.tsx  DecisionCard.tsx  ModelSizes.tsx  ParamTable.tsx
website/components/viz/: ArchitectureExplorer.tsx  TokenizationWalkthrough.tsx
website/content/docs/: about.mdx  index.mdx  meta.json
website/content/docs/concepts/: aml-graph.mdx  architecture.mdx  meta.json  model-sizes.mdx  nemotron.mdx
website/content/docs/decisions/: decisions-log.mdx  meta.json  paper-fidelity.mdx  reproducibility.mdx
website/content/docs/get-started/: install.mdx  meta.json  quickstart.mdx
website/content/docs/reference/: api.mdx  cli.mdx  configuration.mdx  data-contract.mdx  gates.mdx  meta.json
website/content/docs/tutorials/: aml-gnn.mdx  aws.mdx  bring-your-own-data.mdx  data-pipeline.mdx  evaluate.mdx  meta.json  pretrain.mdx  serve.mdx
website/data/: facts.json
website/lib/: layout.shared.tsx  shared.ts
